name:             electric-boogaloo
version:          0.1.0.0
-- synopsis:
-- description
license:          BSD3
license-file:     LICENSE
author:           Getty Ritter <gettyritter@gmail.com>
maintainer:       Getty Ritter <gettyritter@gmail.com>
copyright:        ©2016 Getty Ritter
category:         Database
build-type:       Simple
cabal-version:    >= 1.12

executable electric-boogaloo
  hs-source-dirs:      src
  main-is:             Main.hs
  default-extensions:  OverloadedStrings,
                       ScopedTypeVariables
  ghc-options:         -Wall
  build-depends:       base >=4.7 && <4.9, text
  default-language:    Haskell2010
