name:             electric-boogaloo
version:          0.1.1
synopsis:         Simple opinionated sugar for SQLite
description:      A basic translator for a straightforward, terse sugar
                  designed for making certain SQLite table definitions
                  easier to read and write.
license:          BSD3
license-file:     LICENSE
author:           Getty Ritter <gettyritter@gmail.com>
maintainer:       Getty Ritter <gettyritter@gmail.com>
copyright:        ©2016 Getty Ritter
category:         Database
build-type:       Simple
cabal-version:    >= 1.12

executable electric-boogaloo
  hs-source-dirs:      src
  main-is:             Main.hs
  default-extensions:  OverloadedStrings,
                       ScopedTypeVariables
  ghc-options:         -Wall
  build-depends:       base >=4.7 && <4.9,
                       text >=1.2.2 && <1.3
  default-language:    Haskell2010
