name:             electric-boogaloo
version:          0.1.3
synopsis:         Simple opinionated sugar for SQLite
description:      A basic translator for a straightforward, terse sugar
                  designed for making certain SQLite table definitions
                  easier to read and write.
license:          BSD3
license-file:     LICENSE
author:           Getty Ritter <gettyritter@gmail.com>
maintainer:       Getty Ritter <gettyritter@gmail.com>
copyright:        ©2017 Getty Ritter
category:         Database
build-type:       Simple
cabal-version:    >= 1.12

source-repository head
  type: git
  location: git://github.com/aisamanra/electric-boogaloo.git

executable electric-boogaloo
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base >=4.7 && <5,
                       text >=1.2.2 && <1.3
  default-language:    Haskell2010
